add publish endpoint
