# swagger.yaml
@@ -165,6 +165,30 @@ paths:
           description: Interactive not found
         '500':
           description: Internal error
+  /collection/{id}:
+    patch:
+      tags:
+        - collection
+      summary: Publish all interactives in the collection
+      description: ''
+      operationId: PublishCollectionHandler
+      parameters:
+        - name: id
+          in: path
+          description: ID of collection being published
+          required: true
+          schema:
+            type: string
+            format: binary
+      responses:
+        '200':
+          description: Success
+        '409':
+          description: interactive not in required state (conflict)
+        '404':
+          description: not interactive linked to collection (not found)
+        '500':
+          description: Internal error
 components:
   requestBodies:
     NewInteractiveHandler:
